<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <!-- <parent> -->
    <!--     <version>3.1.12</version> -->
    <!--     <groupId>org.springframework.boot</groupId> -->
    <!--     <artifactId>spring-boot-starter-parent</artifactId> -->
    <!-- </parent> -->

    <modelVersion>4.0.0</modelVersion>
    <groupId>cn.oyzh</groupId>
    <artifactId>fx-base</artifactId>
    <version>1.3.2</version>
    <packaging>pom</packaging>
    <modules>
        <module>fx-pkg</module>
        <module>fx-plus</module>
        <module>fx-common</module>
        <module>fx-terminal</module>
        <module>fx-rich</module>
    </modules>

    <properties>
        <fx.version>1.3.2</fx.version>
        <poi.version>5.3.0</poi.version>
        <h2.version>2.3.232</h2.version>
        <jsch.version>0.2.17</jsch.version>
        <zxing.version>3.5.3</zxing.version>
        <dom4j.version>2.1.3</dom4j.version>
        <log4j.version>2.24.0</log4j.version>
        <junit.version>4.13.2</junit.version>
        <spring.version>6.0.18</spring.version>
        <hutool.version>5.8.26</hutool.version>
        <lombok.version>1.18.34</lombok.version>
        <lombok.version>1.18.32</lombok.version>
        <javafx.version>24-ea+5</javafx.version>
        <guava.version>33.1.0-jre</guava.version>
        <sqllit.version>3.46.1.0</sqllit.version>
        <snakeyaml.version>2.3</snakeyaml.version>
        <fastjson.version>2.0.52</fastjson.version>
        <richtextfx.version>0.11.3</richtextfx.version>
        <maven.compiler.source>21</maven.compiler.source>
        <spring.boot.version>3.1.12</spring.boot.version>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- https://mvnrepository.com/artifact/org.dom4j/dom4j -->
            <dependency>
                <groupId>org.dom4j</groupId>
                <artifactId>dom4j</artifactId>
                <version>${dom4j.version}</version>
            </dependency>

            <!-- ssh类库 -->
            <!-- https://mvnrepository.com/artifact/com.github.mwiede/jsch -->
            <dependency>
                <groupId>com.github.mwiede</groupId>
                <artifactId>jsch</artifactId>
                <version>${jsch.version}</version>
            </dependency>

            <!-- 自定义类库，通用 -->
            <dependency>
                <groupId>cn.oyzh</groupId>
                <artifactId>fx-common</artifactId>
                <version>${fx.version}</version>
            </dependency>

            <!-- 自定义类库，fx相关 -->
            <dependency>
                <groupId>cn.oyzh</groupId>
                <artifactId>fx-plus</artifactId>
                <version>${fx.version}</version>
            </dependency>

            <!-- 打包工具 -->
            <dependency>
                <groupId>cn.oyzh</groupId>
                <artifactId>fx-pkg</artifactId>
                <version>${fx.version}</version>
                <scope>test</scope>
            </dependency>

            <!-- 自定义类库，终端相关 -->
            <dependency>
                <groupId>cn.oyzh</groupId>
                <artifactId>fx-terminal</artifactId>
                <version>${fx.version}</version>
            </dependency>

            <!-- 自定义类库，富文本相关 -->
            <dependency>
                <groupId>cn.oyzh</groupId>
                <artifactId>fx-rich</artifactId>
                <version>${fx.version}</version>
            </dependency>

            <!-- Spring boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter</artifactId>
                <version>${spring.boot.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j2-impl -->
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-slf4j2-impl</artifactId>
                <version>${log4j.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <!-- 编译插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.0</version>
                <configuration>
                    <source>${maven.compiler.release}</source>
                    <target>${maven.compiler.release}</target>
                    <release>${maven.compiler.release}</release>
                    <encoding>UTF-8</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
